force-app/main/default/objects/Form__mdt/Form__mdt.object-meta.xml
<CustomObject>
    <label>Form</label>
    <pluralLabel>Forms</pluralLabel>
</CustomObject>