force-app/main/default/objects/Form__mdt/fields/ContactEmailLabel__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailLabel__c</fullName>
    <label>Contact Email Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>