force-app/main/default/objects/Form__mdt/fields/ContractNumberLabel__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberLabel__c</fullName>
    <label>Contract Number Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>