force-app/main/default/objects/Form__mdt/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C</fullName>
                <default>true</default>
                <label>B2C</label>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
                <isActive>false</isActive>
                <label>Autres</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>