force-app/main/default/objects/Form__mdt/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptation_Annexes</fullName>
                <default>true</default>
                <label>Acceptation_Annexes</label>
            </value>
            <value>
                <fullName>Acceptation_Fleet_Cellule_Support</fullName>
            </value>
            <value>
                <fullName>Acceptation_Fleet_Transfert</fullName>
            </value>
            <value>
                <fullName>Acceptation_Fleet_VN</fullName>
            </value>
            <value>
                <fullName>Acceptation_Fleet_VO</fullName>
            </value>
            <value>
                <fullName>Acceptation_Refi_transfert</fullName>
            </value>
            <value>
                <fullName>Acceptation_Retail_VN</fullName>
            </value>
            <value>
                <fullName>Acceptation_Retail_VO</fullName>
            </value>
            <value>
                <fullName>Acceptation_VIP</fullName>
            </value>
            <value>
                <fullName>Acceptation_VRGF</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_4_fois_sans_frais</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_affacturage_VN</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_affacturage_VO</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_comptabilite</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_double_financement</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_post_traitement</fullName>
            </value>
            <value>
                <fullName>Credit_reseau_RAC</fullName>
            </value>
            <value>
                <fullName>Fleet_Fins_de_contrat</fullName>
            </value>
            <value>
                <fullName>Fleet_Grands_comptes</fullName>
            </value>
            <value>
                <fullName>Fleet_RC</fullName>
            </value>
            <value>
                <fullName>Fleet_Tri_Manuel</fullName>
            </value>
            <value>
                <fullName>Paiement_Fleet</fullName>
            </value>
            <value>
                <fullName>Paiement_Grands_comptes</fullName>
            </value>
            <value>
                <fullName>Paiement_Manuel</fullName>
            </value>
            <value>
                <fullName>Paiement_Regularisations</fullName>
            </value>
            <value>
                <fullName>Paiement_Retail</fullName>
            </value>
            <value>
                <fullName>Qualite_DORAB_divers</fullName>
            </value>
            <value>
                <fullName>Qualite_DORAB_reclamations</fullName>
            </value>
            <value>
                <fullName>Recouvrement_Fleet</fullName>
            </value>
            <value>
                <fullName>Recouvrement_Fraudes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>