force-app/main/default/objects/Form__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Folder__c</columns>
    <columns>Subject__c</columns>
    <columns>Queue__c</columns>
    <columns>Equipe__c</columns>
    <columns>CaseReason__c</columns>
    <columns>CaseSubReason__c</columns>
    <columns>ContactEmailLabel__c</columns>
    <columns>ContractNumberLabel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>contains</operation>
        <value>CCP_Choix de fin de contrat</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>