force-app/main/default/objects/Form__mdt/listViews/B2B.listView-meta.xml
<ListView>
    <fullName>B2B</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Folder__c</columns>
    <columns>Subject__c</columns>
    <columns>Queue__c</columns>
    <columns>CaseReason__c</columns>
    <columns>CaseSubReason__c</columns>
    <columns>ContactEmailLabel__c</columns>
    <columns>ContractNumberLabel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Folder__c</field>
        <operation>equals</operation>
        <value>B2B</value>
    </filters>
    <label>B2B</label>
</ListView>